
New right mouse menu entry 'Copy selected rows to new window' available in all tables.
  If windows with with matching column names and column types already exist another pop up menu allows to append
  the selected rows to one of these windows.

#412 Provided Command Line Interface (CLI).
  See Readme.txt in the squirrelcli/ subdirectory of your SQuirreL installation.


Bug fixes:


#1349 Added missing keyboard short cuts to SQL editors right mouse menu.

#1354 Regex filter in SQL history is limited to capital letters
  Thanks to Chris B for the fix.

#1353 Object tree search field's focus can now be transferred using shift+tab

#1352 After "Modify Alias..." a longer Alias name is cut off and displayed with "..." in Aliases tree view

#1348 Shortcut is displayed twice in flyover/tooltip

Reading on SQL results (see combo box on upper right) didn't work when multiple SQLs were executed.

Canceling SQL executions raised NullPointerException.

Editing results didn't work when multiple SQLs were executed using statement separator.

Column search feature: Moving multiple columns to table begin did not work right.

#1282 Session menu now has a scroll bar if it's too long to fit on screen.

Corrections/abbreviations dialog didn't scroll right when new row was added.

DBCopy-Plugin: When 'Paste table as/filtered...' was used before simple 'Paste table' information of the first action were not cleaned.

Reloading last SQL contents (*) did mark the SQL editor dirty i.e. unsaved buffer edits confirm firm was triggered.
  (*) See See menu File --> Global Preferences --> Tab SQL --> Section General --> Check box 'Reload last SQL editor contents when Session is opened'

Close confirmations now also work for extra SQL Worksheets (ctrl N).

'New Session Properties' --> tab SQL was not initially scrolled to top.

#1341 Squirrel was started twice by squirrel-sql.bat in the plain zip versions of snapshot-20180406_0118.
